convivial-demo-34134: Fix insufficient color contrast. (#57)
Mirrored from morpht/convivial-demo@ebb0f0b (34134-accessibility).

--- a/themes/custom/convivial_bootstrap/components/view-modes/teaser/_teaser.scss
+++ b/themes/custom/convivial_bootstrap/components/view-modes/teaser/_teaser.scss
@@ -76,7 +76,7 @@ $teaser--medium_image-width: 12.5rem; // 200px
 }
 
 .teaser__tags {
-  color: $text-muted;
+  color: var(--alt-text);
   @include font-size($small-font-size);
 }
 
